@@ -11,7 +11,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -32,45 +31,42 @@ public class MedicalRecordController {
     private AppointmentService appointmentService;
 
     @PostMapping("/medical-records")
+    @PreAuthorize("hasRole('DOCTOR')")
     public ResponseEntity<?> createMedicalRecord(
             @RequestParam("patientId") Integer patientId,
             @RequestParam("doctorId") Integer doctorId,
             @RequestParam("diagnosis") String diagnosis,
             @RequestParam(value = "notes", required = false) String notes,
             @RequestParam(value = "appointmentId", required = false) Integer appointmentId,
+            @RequestParam(value = "serviceId", required = false) Integer serviceId,
             @RequestParam(value = "productQuantities", required = false) String productQuantitiesJson,
             @RequestParam(value = "files", required = false) MultipartFile[] files) {
         try {
             System.out.println("Received POST /medical-records: patientId=" + patientId + ", doctorId=" + doctorId +
-                    ", diagnosis=" + diagnosis + ", appointmentId=" + appointmentId + ", productQuantities=" + productQuantitiesJson +
-                    ", files=" + (files != null ? Arrays.stream(files).map(MultipartFile::getOriginalFilename).toList() : "none"));
+                    ", diagnosis=" + diagnosis + ", appointmentId=" + appointmentId + ", serviceId=" + serviceId +
+                    ", productQuantitiesJson=" + productQuantitiesJson +
+                    ", files=" + (files != null ? Arrays.stream(files).map(MultipartFile::getOriginalFilename).collect(Collectors.toList()) : "none"));
 
-            // Validate patientId
             if (patientId == null || patientId <= 0) {
                 return ResponseEntity.badRequest().body(new ErrorResponse("ID bệnh nhân không hợp lệ!"));
             }
 
-            // Validate doctorId
             if (doctorId == null || doctorId <= 0) {
                 return ResponseEntity.badRequest().body(new ErrorResponse("ID bác sĩ không hợp lệ!"));
             }
 
-            // Validate diagnosis
             if (diagnosis == null || diagnosis.trim().isEmpty()) {
                 return ResponseEntity.badRequest().body(new ErrorResponse("Chẩn đoán không được để trống!"));
             }
 
-            // Validate appointmentId
             if (appointmentId != null) {
                 Appointment appointment = appointmentService.getAppointmentById(appointmentId)
                         .orElseThrow(() -> new IllegalArgumentException("Cuộc hẹn không tồn tại!"));
-                System.out.println("Appointment status for ID " + appointmentId + ": " + appointment.getStatus().name());
                 if (appointment.getStatus() != AppointmentStatus.CONFIRMED) {
                     return ResponseEntity.badRequest().body(new ErrorResponse("Cuộc hẹn chưa được xác nhận, không thể tạo hồ sơ!"));
                 }
             }
 
-            // Validate productQuantities
             List<Map<String, Integer>> productQuantities = null;
             if (productQuantitiesJson != null && !productQuantitiesJson.isEmpty()) {
                 try {
@@ -79,16 +75,18 @@ public class MedicalRecordController {
                             mapper.getTypeFactory().constructCollectionType(List.class, Map.class));
                     for (Map<String, Integer> pq : productQuantities) {
                         if (!pq.containsKey("productId") || !pq.containsKey("quantity") ||
-                                pq.get("productId") <= 0 || pq.get("quantity") <= 0) {
+                                pq.get("productId") == null || pq.get("productId") <= 0 ||
+                                pq.get("quantity") == null || pq.get("quantity") <= 0) {
                             return ResponseEntity.badRequest().body(new ErrorResponse("Dữ liệu productQuantities không hợp lệ!"));
                         }
                     }
                 } catch (Exception e) {
-                    return ResponseEntity.badRequest().body(new ErrorResponse("Dữ liệu productQuantities không đúng định dạng JSON!"));
+                    System.err.println("Error parsing productQuantitiesJson: " + e.getMessage());
+                    e.printStackTrace();
+                    return ResponseEntity.badRequest().body(new ErrorResponse("Dữ liệu productQuantities không đúng định dạng JSON: " + e.getMessage()));
                 }
             }
 
-            // Validate files
             if (files != null) {
                 for (MultipartFile file : files) {
                     if (file.isEmpty()) {
@@ -106,46 +104,52 @@ public class MedicalRecordController {
 
             MedicalRecord medicalRecord = medicalRecordService.createMedicalRecord(
                     patientId, doctorId, diagnosis, notes, appointmentId, productQuantities, files);
+            if (appointmentId != null && serviceId != null) {
+                appointmentService.updateAppointmentService(appointmentId, serviceId);
+            }
             return new ResponseEntity<>(medicalRecord, HttpStatus.CREATED);
         } catch (IllegalArgumentException e) {
-            System.err.println("Bad Request: " + e.getMessage());
+            System.err.println("IllegalArgumentException in createMedicalRecord: " + e.getMessage());
+            e.printStackTrace();
             return ResponseEntity.badRequest().body(new ErrorResponse(e.getMessage()));
         } catch (Exception e) {
-            System.err.println("Internal Server Error: " + e.getMessage());
+            System.err.println("Error in createMedicalRecord: " + e.getMessage());
             e.printStackTrace();
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(new ErrorResponse("Lỗi server: " + e.getMessage()));
+                    .body(new ErrorResponse("Lỗi server khi tạo hồ sơ bệnh án: " + e.getMessage()));
         }
     }
 
     @GetMapping("/medical-records/products-medicine")
+    @PreAuthorize("hasRole('DOCTOR')")
     public ResponseEntity<?> getProductsMedicine() {
         try {
-            System.out.println("Received GET /medical-records/products-medicine");
             List<Product> products = medicalRecordService.getProductsMedicine();
             return new ResponseEntity<>(products, HttpStatus.OK);
         } catch (Exception e) {
-            System.err.println("Error fetching products: " + e.getMessage());
+            System.err.println("Error in getProductsMedicine: " + e.getMessage());
+            e.printStackTrace();
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
                     .body(new ErrorResponse("Lỗi khi lấy danh sách thuốc: " + e.getMessage()));
         }
     }
 
     @GetMapping("/appointments/{appointmentId}/status")
+    @PreAuthorize("hasAnyRole('DOCTOR', 'PATIENT')")
     public ResponseEntity<?> getAppointmentStatus(@PathVariable Integer appointmentId) {
         try {
-            System.out.println("Received GET /appointments/" + appointmentId + "/status");
             Appointment appointment = appointmentService.getAppointmentById(appointmentId)
                     .orElseThrow(() -> new IllegalArgumentException("Cuộc hẹn không tồn tại!"));
             return ResponseEntity.ok(new StatusResponse(appointment.getStatus().name()));
         } catch (IllegalArgumentException e) {
-            System.err.println("Bad Request: " + e.getMessage());
+            System.err.println("IllegalArgumentException in getAppointmentStatus: " + e.getMessage());
+            e.printStackTrace();
             return ResponseEntity.badRequest().body(new ErrorResponse(e.getMessage()));
         } catch (Exception e) {
-            System.err.println("Error fetching appointment status: " + e.getMessage());
+            System.err.println("Error in getAppointmentStatus: " + e.getMessage());
             e.printStackTrace();
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(new ErrorResponse("Lỗi server: " + e.getMessage()));
+                    .body(new ErrorResponse("Lỗi server khi lấy trạng thái cuộc hẹn: " + e.getMessage()));
         }
     }
 
@@ -153,91 +157,54 @@ public class MedicalRecordController {
     @PreAuthorize("hasRole('DOCTOR')")
     public ResponseEntity<?> getDoctorMedicalRecords(@PathVariable Integer doctorId) {
         try {
-            String username = SecurityContextHolder.getContext().getAuthentication().getName();
-            String token = SecurityContextHolder.getContext().getAuthentication().getCredentials().toString();
-            System.out.println("Received GET /medical-records/doctor/" + doctorId + " | User: " + username +
-                    " | Token: " + (token != null ? token.substring(0, Math.min(10, token.length())) + "..." : "No token"));
-
-            // Validate doctorId
-            if (doctorId == null || doctorId <= 0) {
-                System.err.println("Invalid doctorId: " + doctorId);
-                return ResponseEntity.badRequest().body(new ErrorResponse("ID bác sĩ không hợp lệ!"));
-            }
-
             List<MedicalRecord> records = medicalRecordService.getDoctorMedicalRecordsByUserId(doctorId);
-            System.out.println("Query executed for doctorId: " + doctorId + " | Found: " + records.size() + " records");
-            // Log only essential details to avoid toString recursion
-            String recordsSummary = records.isEmpty() ? "Empty" :
-                    records.stream()
-                            .map(record -> "MedicalRecord{id=" + record.getId() + ", patientId=" +
-                                    (record.getPatient() != null ? record.getPatient().getId() : "null") +
-                                    ", diagnosis=" + record.getDiagnosis() + "}")
-                            .collect(Collectors.joining(", "));
-            System.out.println("Records: " + recordsSummary);
-
             return ResponseEntity.ok(records);
         } catch (IllegalArgumentException e) {
-            System.err.println("Bad Request for doctorId " + doctorId + ": " + e.getMessage());
+            System.err.println("IllegalArgumentException in getDoctorMedicalRecords: " + e.getMessage());
+            e.printStackTrace();
             return ResponseEntity.badRequest().body(new ErrorResponse(e.getMessage()));
         } catch (Exception e) {
-            System.err.println("Error fetching medical records for doctorId " + doctorId + ": " + e.getMessage());
+            System.err.println("Error in getDoctorMedicalRecords: " + e.getMessage());
             e.printStackTrace();
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(new ErrorResponse("Lỗi server: " + e.getMessage()));
+                    .body(new ErrorResponse("Lỗi server khi lấy hồ sơ bệnh án bác sĩ: " + e.getMessage()));
         }
     }
 
     @GetMapping("/medical-records/patient/{patientId}")
+    @PreAuthorize("hasAnyRole('PATIENT', 'DOCTOR')")
     public ResponseEntity<?> getPatientMedicalRecords(@PathVariable Integer patientId) {
         try {
-            String username = SecurityContextHolder.getContext().getAuthentication().getName();
-            System.out.println("Received GET /medical-records/patient/" + patientId + " | User: " + username);
-
-            // Validate patientId
-            if (patientId == null || patientId <= 0) {
-                System.err.println("Invalid patientId: " + patientId);
-                return ResponseEntity.badRequest().body(new ErrorResponse("ID bệnh nhân không hợp lệ!"));
-            }
-
             List<MedicalRecord> records = medicalRecordService.getPatientMedicalRecordsByUserId(patientId);
-            System.out.println("Query executed for patientId: " + patientId + " | Found: " + records.size() + " records");
-            
             return ResponseEntity.ok(records);
         } catch (IllegalArgumentException e) {
-            System.err.println("Bad Request for patientId " + patientId + ": " + e.getMessage());
+            System.err.println("IllegalArgumentException in getPatientMedicalRecords: " + e.getMessage());
+            e.printStackTrace();
             return ResponseEntity.badRequest().body(new ErrorResponse(e.getMessage()));
         } catch (Exception e) {
-            System.err.println("Error fetching medical records for patientId " + patientId + ": " + e.getMessage());
+            System.err.println("Error in getPatientMedicalRecords: " + e.getMessage());
             e.printStackTrace();
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(new ErrorResponse("Lỗi server: " + e.getMessage()));
+                    .body(new ErrorResponse("Lỗi server khi lấy hồ sơ bệnh án bệnh nhân: " + e.getMessage()));
         }
     }
 
     @GetMapping("/medical-records/{recordId}")
+    @PreAuthorize("hasAnyRole('DOCTOR', 'PATIENT')")
     public ResponseEntity<?> getMedicalRecordById(@PathVariable Integer recordId) {
         try {
-            String username = SecurityContextHolder.getContext().getAuthentication().getName();
-            System.out.println("Received GET /medical-records/" + recordId + " | User: " + username);
-
-            // Validate recordId
-            if (recordId == null || recordId <= 0) {
-                System.err.println("Invalid recordId: " + recordId);
-                return ResponseEntity.badRequest().body(new ErrorResponse("ID hồ sơ không hợp lệ!"));
-            }
-
             MedicalRecord record = medicalRecordService.getMedicalRecordById(recordId)
                     .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy hồ sơ điều trị với ID: " + recordId));
-            
             return ResponseEntity.ok(record);
         } catch (IllegalArgumentException e) {
-            System.err.println("Bad Request for recordId " + recordId + ": " + e.getMessage());
+            System.err.println("IllegalArgumentException in getMedicalRecordById: " + e.getMessage());
+            e.printStackTrace();
             return ResponseEntity.badRequest().body(new ErrorResponse(e.getMessage()));
         } catch (Exception e) {
-            System.err.println("Error fetching medical record for recordId " + recordId + ": " + e.getMessage());
+            System.err.println("Error in getMedicalRecordById: " + e.getMessage());
             e.printStackTrace();
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(new ErrorResponse("Lỗi server: " + e.getMessage()));
+                    .body(new ErrorResponse("Lỗi server khi lấy hồ sơ bệnh án: " + e.getMessage()));
         }
     }
 
@@ -245,68 +212,164 @@ public class MedicalRecordController {
     @PreAuthorize("hasRole('DOCTOR')")
     public ResponseEntity<?> checkMedicalRecordExistsByAppointmentId(@PathVariable Integer appointmentId) {
         try {
-            System.out.println("Received request for /by-appointment/" + appointmentId + " by user: " +
-                    SecurityContextHolder.getContext().getAuthentication().getName());
             boolean exists = medicalRecordService.existsByAppointmentId(appointmentId);
-            System.out.println("Medical record exists for appointmentId " + appointmentId + ": " + exists);
             return ResponseEntity.ok(new ExistsResponse(exists));
         } catch (Exception e) {
-            System.err.println("Error checking medical record for appointmentId " + appointmentId + ": " + e.getMessage());
+            System.err.println("Error in checkMedicalRecordExistsByAppointmentId: " + e.getMessage());
             e.printStackTrace();
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(new ErrorResponse("Lỗi server: " + e.getMessage()));
+                    .body(new ErrorResponse("Lỗi server khi kiểm tra hồ sơ bệnh án: " + e.getMessage()));
         }
     }
-    
-    /**
-     * API để lấy thông tin chi tiết về thuốc từ hồ sơ y tế theo ID cuộc hẹn
-     * Bao gồm danh sách thuốc, số lượng và giá tiền
-     */
+
+    @GetMapping("/medical-records/by-appointment/{appointmentId}/record")
+    @PreAuthorize("hasRole('DOCTOR')")
+    public ResponseEntity<?> getMedicalRecordByAppointmentId(@PathVariable Integer appointmentId) {
+        try {
+            MedicalRecord record = medicalRecordService.getMedicalRecordByAppointmentId(appointmentId)
+                    .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy hồ sơ y tế cho cuộc hẹn này"));
+            return ResponseEntity.ok(record);
+        } catch (IllegalArgumentException e) {
+            System.err.println("IllegalArgumentException in getMedicalRecordByAppointmentId: " + e.getMessage());
+            e.printStackTrace();
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new ErrorResponse(e.getMessage()));
+        } catch (Exception e) {
+            System.err.println("Error in getMedicalRecordByAppointmentId: " + e.getMessage());
+            e.printStackTrace();
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(new ErrorResponse("Lỗi server khi lấy hồ sơ bệnh án theo cuộc hẹn: " + e.getMessage()));
+        }
+    }
+
     @GetMapping("/medical-records/by-appointment/{appointmentId}/medications")
-    @CrossOrigin(origins = "http://localhost:3000", allowCredentials = "true")
+    @PreAuthorize("hasAnyRole('DOCTOR', 'PATIENT')")
     public ResponseEntity<?> getMedicationsByAppointmentId(@PathVariable Integer appointmentId) {
         try {
-            System.out.println("Received request for medications by appointmentId: " + appointmentId);
-            
-            // Kiểm tra xem có hồ sơ y tế cho cuộc hẹn này không
             if (!medicalRecordService.existsByAppointmentId(appointmentId)) {
                 return ResponseEntity.status(HttpStatus.NOT_FOUND)
                         .body(new ErrorResponse("Không tìm thấy hồ sơ y tế cho cuộc hẹn này"));
             }
-            
-            // Lấy thông tin thuốc từ hồ sơ y tế
+
             MedicalRecord medicalRecord = medicalRecordService.getMedicalRecordByAppointmentId(appointmentId)
                     .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy hồ sơ y tế cho cuộc hẹn này"));
-            
-            // Tính tổng tiền thuốc
+
             double totalMedicationAmount = medicalRecord.getRecommendedProducts().stream()
                     .filter(mrp -> mrp.getProduct().getType() == org.eyespire.eyespireapi.model.enums.ProductType.MEDICINE)
                     .mapToDouble(mrp -> mrp.getQuantity() * mrp.getProduct().getPrice().doubleValue())
                     .sum();
-            
-            // Tạo response với danh sách thuốc và tổng tiền
+
             Map<String, Object> response = Map.of(
-                "products", medicalRecord.getRecommendedProducts().stream()
-                    .filter(mrp -> mrp.getProduct().getType() == org.eyespire.eyespireapi.model.enums.ProductType.MEDICINE)
-                    .map(mrp -> Map.of(
-                        "id", mrp.getProduct().getId(),
-                        "name", mrp.getProduct().getName(),
-                        "price", mrp.getProduct().getPrice(),
-                        "quantity", mrp.getQuantity(),
-                        "totalPrice", mrp.getQuantity() * mrp.getProduct().getPrice().doubleValue()
-                    ))
-                    .collect(Collectors.toList()),
-                "totalAmount", totalMedicationAmount
+                    "products", medicalRecord.getRecommendedProducts().stream()
+                            .filter(mrp -> mrp.getProduct().getType() == org.eyespire.eyespireapi.model.enums.ProductType.MEDICINE)
+                            .map(mrp -> Map.of(
+                                    "id", mrp.getProduct().getId(),
+                                    "name", mrp.getProduct().getName(),
+                                    "price", mrp.getProduct().getPrice(),
+                                    "quantity", mrp.getQuantity(),
+                                    "totalPrice", mrp.getQuantity() * mrp.getProduct().getPrice().doubleValue()
+                            ))
+                            .collect(Collectors.toList()),
+                    "totalAmount", totalMedicationAmount
             );
-            
+
             return ResponseEntity.ok(response);
         } catch (IllegalArgumentException e) {
+            System.err.println("IllegalArgumentException in getMedicationsByAppointmentId: " + e.getMessage());
+            e.printStackTrace();
             return ResponseEntity.badRequest().body(new ErrorResponse(e.getMessage()));
         } catch (Exception e) {
-            System.err.println("Error fetching medications for appointmentId " + appointmentId + ": " + e.getMessage());
+            System.err.println("Error in getMedicationsByAppointmentId: " + e.getMessage());
             e.printStackTrace();
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(new ErrorResponse("Lỗi server: " + e.getMessage()));
+                    .body(new ErrorResponse("Lỗi server khi lấy thông tin thuốc: " + e.getMessage()));
+        }
+    }
+
+    @PutMapping("/medical-records/{recordId}")
+    @PreAuthorize("hasRole('DOCTOR')")
+    public ResponseEntity<?> updateMedicalRecord(
+            @PathVariable Integer recordId,
+            @RequestParam(value = "diagnosis", required = false) String diagnosis,
+            @RequestParam(value = "serviceId", required = false) Integer serviceId,
+            @RequestParam(value = "notes", required = false) String notes,
+            @RequestParam(value = "productQuantities", required = false) String productQuantitiesJson,
+            @RequestParam(value = "files", required = false) MultipartFile[] files,
+            @RequestParam(value = "filesToDelete", required = false) String filesToDeleteJson) {
+        try {
+            System.out.println("Received PUT /medical-records/" + recordId + ":");
+            System.out.println("Diagnosis: " + diagnosis);
+            System.out.println("ServiceId: " + serviceId);
+            System.out.println("Notes: " + notes);
+            System.out.println("ProductQuantitiesJson: " + productQuantitiesJson);
+            System.out.println("Files: " + (files != null ? Arrays.stream(files).map(MultipartFile::getOriginalFilename).collect(Collectors.toList()) : "none"));
+            System.out.println("FilesToDeleteJson: " + filesToDeleteJson);
+
+            if (recordId == null || recordId <= 0) {
+                return ResponseEntity.badRequest().body(new ErrorResponse("ID hồ sơ không hợp lệ!"));
+            }
+
+            List<Map<String, Integer>> productQuantities = null;
+            if (productQuantitiesJson != null && !productQuantitiesJson.isEmpty()) {
+                try {
+                    ObjectMapper mapper = new ObjectMapper();
+                    productQuantities = mapper.readValue(productQuantitiesJson,
+                            mapper.getTypeFactory().constructCollectionType(List.class, Map.class));
+                    for (Map<String, Integer> pq : productQuantities) {
+                        if (!pq.containsKey("productId") || !pq.containsKey("quantity") ||
+                                pq.get("productId") == null || pq.get("productId") <= 0 ||
+                                pq.get("quantity") == null || pq.get("quantity") <= 0) {
+                            return ResponseEntity.badRequest().body(new ErrorResponse("Dữ liệu productQuantities không hợp lệ: " + pq));
+                        }
+                    }
+                } catch (Exception e) {
+                    System.err.println("Error parsing productQuantitiesJson: " + e.getMessage());
+                    e.printStackTrace();
+                    return ResponseEntity.badRequest().body(new ErrorResponse("Dữ liệu productQuantities không đúng định dạng JSON: " + e.getMessage()));
+                }
+            }
+
+            List<String> filesToDelete = null;
+            if (filesToDeleteJson != null && !filesToDeleteJson.isEmpty()) {
+                try {
+                    ObjectMapper mapper = new ObjectMapper();
+                    filesToDelete = mapper.readValue(filesToDeleteJson,
+                            mapper.getTypeFactory().constructCollectionType(List.class, String.class));
+                } catch (Exception e) {
+                    System.err.println("Error parsing filesToDeleteJson: " + e.getMessage());
+                    e.printStackTrace();
+                    return ResponseEntity.badRequest().body(new ErrorResponse("Dữ liệu filesToDelete không đúng định dạng JSON: " + e.getMessage()));
+                }
+            }
+
+            if (files != null) {
+                for (MultipartFile file : files) {
+                    if (file.isEmpty()) {
+                        return ResponseEntity.badRequest().body(new ErrorResponse("File rỗng: " + file.getOriginalFilename()));
+                    }
+                    if (file.getSize() > 5 * 1024 * 1024) {
+                        return ResponseEntity.badRequest().body(new ErrorResponse("File quá lớn: " + file.getOriginalFilename()));
+                    }
+                    String contentType = file.getContentType();
+                    if (!Arrays.asList("image/jpeg", "image/png", "application/pdf").contains(contentType)) {
+                        return ResponseEntity.badRequest().body(new ErrorResponse("Định dạng file không được hỗ trợ: " + file.getOriginalFilename()));
+                    }
+                }
+            }
+
+            MedicalRecord updatedRecord = medicalRecordService.updateMedicalRecord(recordId, diagnosis, notes, productQuantities, files, filesToDelete);
+            if (serviceId != null && updatedRecord.getAppointment() != null) {
+                appointmentService.updateAppointmentService(updatedRecord.getAppointment().getId(), serviceId);
+            }
+            return new ResponseEntity<>(updatedRecord, HttpStatus.OK);
+        } catch (IllegalArgumentException e) {
+            System.err.println("IllegalArgumentException in updateMedicalRecord: " + e.getMessage());
+            e.printStackTrace();
+            return ResponseEntity.badRequest().body(new ErrorResponse(e.getMessage()));
+        } catch (Exception e) {
+            System.err.println("Error in updateMedicalRecord: " + e.getMessage());
+            e.printStackTrace();
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(new ErrorResponse("Lỗi server khi cập nhật hồ sơ bệnh án: " + e.getMessage()));
         }
     }
 
